--- a/styleSec6.css
+++ b/styleSec6.css
@@ -5,24 +5,32 @@
   font-family: "Kanit", sans-serif;
 }
 
+body {
+  background-color: rgb(8, 6, 11);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
 .sezione6 {
-  width: 79.875rem;
-  height: 46.875rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(8, 6, 11);
+  justify-content: center;
+  height: 100%;
+  padding: 50px 200px;
 }
 
 .blocco1flex {
-  width: 920px;
-  height: 300px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   flex: 2;
 }
 .blocco1flex .textblocco1 {
+  max-width: 50%;
   color: #f4eeff;
   font-size: 1.875rem;
 }
@@ -74,38 +82,45 @@
   cursor: pointer;
 }
 
+.imgBounce {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
 .imgBounce figure {
   padding-left: 50px;
   padding-bottom: 20px;
+  max-width: 50%;
 }
 .imgBounce figure #main-img {
+  width: 400px;
   position: relative;
-  width: 320px;
   z-index: 1;
 }
 .imgBounce figure #top-left {
-  position: relative;
-  top: 230px;
-  left: 40px;
-  width: 250px;
+  width: 400px;
+  position: absolute;
+  top: 20px;
   z-index: 2;
 }
 .imgBounce figure #bottom-right {
-  position: relative;
-  width: 220px;
-  bottom: 230px;
-  right: 150px;
+  width: 350px;
+  position: absolute;
+  top: 100px;
+  right: 310px;
 }
 .imgBounce figure #top-right {
-  position: relative;
-  width: 210px;
-  top: -300px;
-  right: -100px;
+  width: 400px;
+  position: absolute;
+  top: 50px;
+  right: 250px;
 }
 
 .blocco2grid {
-  width: 920px;
-  height: 133px;
+  width: 100%;
+  height: 100%;
   flex: 1;
   display: grid;
   gap: 30px;
@@ -129,4 +144,77 @@
   border-left: 1px rgb(38, 33, 48) solid;
   height: 50%;
   padding-left: 15px;
+}
+
+@media screen and (max-width: 700px) {
+  .sezione6 {
+    padding: 0;
+  }
+  div.blocco1flex {
+    width: 100% !important;
+    display: flex;
+    flex-direction: column !important;
+    padding: 0 50px;
+  }
+  .blocco2grid {
+    padding: 30px 50px;
+    width: 100%;
+    height: 100%;
+    flex: 1;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(2, auto);
+    grid-template-areas: "quadro1 ,quadro2" "quadro3, quadro4" "quadro5 ,quadro6";
+  }
+  .imgBounce {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    order: 1;
+    padding-bottom: 30px;
+  }
+  .imgBounce figure {
+    padding-left: 50px;
+    padding-bottom: 20px;
+  }
+  .imgBounce figure #main-img {
+    width: 200px;
+    position: relative;
+    z-index: 1;
+  }
+  .imgBounce figure #top-left {
+    width: 200px;
+    position: absolute;
+    top: 210px;
+    left: 100px;
+    z-index: 2;
+  }
+  .imgBounce figure #bottom-right {
+    width: 200px;
+    position: absolute;
+    top: 240px;
+    left: 120px;
+  }
+  .imgBounce figure #top-right {
+    width: 200px;
+    position: absolute;
+    top: 230px;
+    left: 90px;
+  }
+  .textblocco1 {
+    max-width: 100% !important;
+    width: 100%;
+    order: 2;
+    padding: 30px 0;
+    display: flex;
+    flex-direction: column;
+  }
+  .textblocco1 h2 {
+    width: 100%;
+  }
+  .imgBounce {
+    width: 100%;
+  }
 }/*# sourceMappingURL=styleSec6.css.map */
