--- a/style.css
+++ b/style.css
@@ -12,13 +12,23 @@ body {
 
 .sectionSix {
   background-color: #3b374b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+}
+
+.super-criminal {
+  min-width: 70%;
 }
 
 .img-text {
-  margin-top: 6.25rem;
+  margin-top: 3.125rem;
   display: flex;
   justify-content: center;
   gap: 2.5rem;
+  width: 100%;
 }
 .img-text .img-motion {
   display: flex;
@@ -112,10 +122,10 @@ body {
   font-size: 1.25rem;
   font-weight: 600;
   height: 1.5rem;
-  width: 57.5rem;
-  margin-left: 20.625rem;
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: start;
   margin-top: 0.625rem;
   color: #f4eeff;
 }
@@ -140,12 +150,20 @@ body {
   fill: #8a7da8;
 }
 
+#criminal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 3.125rem;
+}
+
 .res-data {
   display: flex;
   justify-content: space-between;
-  width: 57.5rem;
+  width: 100%;
   height: 5rem;
-  margin-left: 20.625rem;
   font-weight: 600;
   margin-top: 1.25rem;
 }
@@ -185,13 +203,13 @@ body {
 
 .hidden {
   display: none;
+  width: 100%;
 }
 .hidden #res-data-hidden {
   display: flex;
   justify-content: space-between;
-  width: 57.5rem;
+  width: 100%;
   height: 5rem;
-  margin-left: 20.625rem;
   font-weight: 600;
   margin-top: 1.25rem;
 }
@@ -218,11 +236,10 @@ body {
   padding-left: 0.625rem;
 }
 .hidden #res-data-hidden #subtitle-res-data-hidden h6 {
+  overflow-wrap: break-word !important;
   color: #9a6aff;
   margin-bottom: 0.5rem;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
+  width: 100%;
 }
 .hidden #res-data-hidden #subtitle-res-data-hidden p {
   color: #f4eeff;
@@ -235,18 +252,29 @@ body {
   color: #b8add2;
 }
 
-@media screen and (max-width: 600px) {
-  body {
+@media screen and (max-width: 840px) {
+  body,
+html {
     overflow-x: hidden;
+  }
+  .super-criminal {
+    width: 100%;
   }
   .img-text {
     flex-direction: column;
-    padding-left: 1.25rem;
+    padding: 2.5rem;
+    padding-bottom: 0rem;
+  }
+  .img-text .grand-motion {
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
   .img-text .img-motion {
-    width: 12.5rem;
+    min-width: 100%;
     height: 11.5625rem;
-    justify-content: end;
+    justify-content: flex-end;
+    margin-right: 21.875rem;
   }
   .img-text figure #arrow {
     width: 12.5rem;
@@ -270,12 +298,30 @@ body {
   .img-text .text #title-par {
     font-size: 1.875rem;
   }
+  #criminal {
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
   .title-res-data {
-    margin-left: 1.25rem;
+    width: 100%;
   }
   .res-data {
-    margin-left: 0.625rem;
     width: 100%;
-    margin-left: 1.25rem;
+  }
+  #subtitle-res-data h6 {
+    width: 100% !important;
+    overflow-wrap: break-word !important;
+  }
+}
+@media screen and (max-width: 575px) {
+  .img-text {
+    padding-left: 1.25rem;
+  }
+  #criminal {
+    padding-left: 1.25rem;
+  }
+  .res-data {
+    display: grid !important;
+    grid-template-columns: repeat(2, 1fr) !important;
   }
 }/*# sourceMappingURL=style.css.map */
