--- a/styleSec6.css
+++ b/styleSec6.css
@@ -7,11 +7,8 @@
 
 body {
   background-color: rgb(8, 6, 11);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
 }
 
 .sezione6 {
@@ -20,6 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   height: 100%;
+  width: 100%;
   padding: 50px 200px;
 }
 
@@ -27,10 +25,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 2;
+  width: 100%;
+  height: 70%;
+  margin-bottom: 30px;
 }
 .blocco1flex .textblocco1 {
-  max-width: 50%;
+  width: 50%;
   color: #f4eeff;
   font-size: 1.875rem;
 }
@@ -83,45 +83,60 @@ body {
 }
 
 .imgBounce {
-  width: 100%;
   height: 100%;
+  width: 50%;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-}
-.imgBounce figure {
   padding-left: 50px;
   padding-bottom: 20px;
   max-width: 50%;
-}
-.imgBounce figure #main-img {
-  width: 400px;
   position: relative;
-  z-index: 1;
 }
-.imgBounce figure #top-left {
-  width: 400px;
+.imgBounce #main-img {
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
   position: absolute;
-  top: 20px;
+  z-index: 1;
+  top: 0;
+}
+.imgBounce #top-left {
+  max-width: 90%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  width: 100%;
+  position: absolute;
+  top: -30px;
+  left: 0;
   z-index: 2;
 }
-.imgBounce figure #bottom-right {
-  width: 350px;
+.imgBounce #bottom-right {
+  max-width: 90%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  width: 100%;
   position: absolute;
-  top: 100px;
-  right: 310px;
+  top: -25;
+  right: 0;
 }
-.imgBounce figure #top-right {
-  width: 400px;
+.imgBounce #top-right {
+  max-width: 90%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  width: 100%;
   position: absolute;
-  top: 50px;
-  right: 250px;
+  top: 0;
+  left: 0;
 }
 
 .blocco2grid {
   width: 100%;
-  height: 100%;
-  flex: 1;
+  height: 30%;
   display: grid;
   gap: 30px;
   grid-template-columns: repeat(3, auto);
@@ -146,9 +161,13 @@ body {
   padding-left: 15px;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 852px) {
+  body {
+    min-height: 100vh !important;
+  }
   .sezione6 {
     padding: 0;
+    margin-right: 30px !important;
   }
   div.blocco1flex {
     width: 100% !important;
@@ -167,10 +186,12 @@ body {
     grid-template-areas: "quadro1 ,quadro2" "quadro3, quadro4" "quadro5 ,quadro6";
   }
   .imgBounce {
-    width: 100%;
+    max-height: 500px !important;
+    max-width: 500px !important;
     height: 100%;
+    width: 100%;
     display: flex;
-    align-items: flex-end;
+    align-self: flex-end;
     flex-wrap: wrap;
     order: 1;
     padding-bottom: 30px;
@@ -204,10 +225,9 @@ body {
     left: 90px;
   }
   .textblocco1 {
-    max-width: 100% !important;
-    width: 100%;
+    width: 100% !important;
+    height: 100%;
     order: 2;
-    padding: 30px 0;
     display: flex;
     flex-direction: column;
   }
