--- a/styleSec6.scss
+++ b/styleSec6.scss
@@ -13,11 +13,8 @@
 
 body {
     background-color: rgb(8, 6, 11);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
 }
 
 .sezione6 {
@@ -26,18 +23,22 @@ body {
     align-items: center;
     justify-content: center;
     height: 100%;
+    width: 100%;
     padding: 50px 200px;
 }
 
 .blocco1flex {
+
     display: flex;
     justify-content: center;
     align-items: center;
-    flex: 2;
+    width: 100%;
+    height: 70%;
+    margin-bottom: 30px;
 
 
     .textblocco1 {
-        max-width: 50%;
+        width: 50%;
         color: #f4eeff;
         font-size: function.convertpx(30);
 
@@ -104,55 +105,69 @@ body {
 }
 
 .imgBounce {
-    width: 100%;
     height: 100%;
+    width: 50%;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    padding-left: 50px;
+    padding-bottom: 20px;
+    max-width: 50%;
+    position: relative;
 
-    figure {
-        padding-left: 50px;
-        padding-bottom: 20px;
-        max-width: 50%;
-
-
-        #main-img {
-            width: 400px;
-            position: relative;
-            z-index: 1;
-
-        }
-
-        #top-left {
-            width: 400px;
-            position: absolute;
-            top: 20px;
-            z-index: 2;
-        }
-
-        #bottom-right {
-            width: 350px;
-            position: absolute;
-            top: 100px;
-            right: 310px;
-        }
-
-        #top-right {
-            width: 400px;
-            position: absolute;
-            top: 50px;
-            right: 250px;
-        }
+    #main-img {
+        max-width: 100%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        position: absolute;
+        z-index: 1;
+        top: 0;
 
     }
 
+    #top-left {
+        max-width: 90%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        width: 100%;
+        position: absolute;
+        top: -30px;
+        left: 0;
+        z-index: 2;
+    }
+
+    #bottom-right {
+        max-width: 90%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        width: 100%;
+        position: absolute;
+        top: -25;
+        right: 0;
+    }
+
+    #top-right {
+        max-width: 90%;
+        max-height: 100%;
+        width: auto;
+        height: auto;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
 
 }
 
+
+
+
 .blocco2grid {
     width: 100%;
-    height: 100%;
-    flex: 1;
+    height: 30%;
     display: grid;
     gap: 30px;
     grid-template-columns: repeat(3, auto);
@@ -181,9 +196,15 @@ body {
     padding-left: 15px;
 }
 
-@media screen and (max-width:700px) {
+///RESPONSIVE
+@media screen and (max-width:852px) {
+    body {
+        min-height: 100vh !important;
+    }
+
     .sezione6 {
         padding: 0;
+        margin-right: 30px !important;
     }
 
     div.blocco1flex {
@@ -191,6 +212,7 @@ body {
         display: flex;
         flex-direction: column !important;
         padding: 0 50px;
+
     }
 
     .blocco2grid {
@@ -207,10 +229,12 @@ body {
     }
 
     .imgBounce {
-        width: 100%;
+        max-height: 500px !important;
+        max-width: 500px !important;
         height: 100%;
+        width: 100%;
         display: flex;
-        align-items: flex-end;
+        align-self: flex-end;
         flex-wrap: wrap;
         order: 1;
         padding-bottom: 30px;
@@ -255,10 +279,9 @@ body {
     }
 
     .textblocco1 {
-        max-width: 100% !important;
-        width: 100%;
+        width: 100% !important;
+        height: 100%;
         order: 2;
-        padding: 30px 0;
         display: flex;
         flex-direction: column;
 
