fix: responsive, javascript

--- a/css/style.css
+++ b/css/style.css
@@ -7,31 +7,32 @@
 
 body {
   overflow-x: hidden;
+  width: 100vw;
+  height: 100vh;
 }
 
 /*------------------------------------------------------Sezione 3--------------------------------------------------------------*/
 .Section_3 {
   background-color: rgb(8, 6, 11);
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  position: relative;
-  padding: 3rem 0;
+  padding: 3rem 2rem;
 }
 .Section_3 .Image-Text_3 {
   width: 100%;
-  max-width: 968px;
+  max-width: 55rem;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 4rem;
   flex: 1 1 0%;
+  gap: 4rem;
 }
 .Section_3 .Image-Text_3 .text_3 {
-  padding: 2rem;
+  width: 100%;
   max-width: 33.125rem;
 }
 .Section_3 .Image-Text_3 .text_3 h1 {
@@ -128,19 +129,21 @@ body {
 /*---------------------------------------------------------------------------------FINE Sezione 3------------------------------------------------------------------------------*/
 /*-----------------------------------------------------------------------------------Sezione 5---------------------------------------------------------------------------------*/
 .Section_5 {
-  width: 100vw;
+  width: 100%;
   background: linear-gradient(rgb(11, 69, 118) 0%, rgb(9, 17, 21) 100%);
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 6.25rem 0;
+  padding: 6.25rem 2.1875rem;
   position: relative;
 }
 .Section_5 .magic-cards {
+  width: 100%;
+  height: 100%;
+  max-width: 31.25rem;
+  max-height: 18.75rem;
   position: relative;
   box-sizing: content-box;
-  height: 18.75rem;
-  width: 31.25rem;
   align-self: flex-end;
   position: absolute;
   left: 0;
@@ -191,10 +194,12 @@ body {
   width: auto;
 }
 .Section_5 .biliard-balls {
+  width: 100%;
+  height: 100%;
+  max-width: 31.25rem;
+  max-height: 18.75rem;
   position: relative;
   box-sizing: content-box;
-  height: 18.75rem;
-  width: 31.25rem;
   align-self: flex-start;
   position: absolute;
   right: 0;
@@ -264,7 +269,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0 2.1875rem;
   padding: 2.5rem 6.25rem;
   border-radius: 3rem;
   border: 1px solid rgb(56, 50, 65);
@@ -463,5 +467,11 @@ body {
   }
 }
 /*---------------------------------------------------------------------------------FINE Sezione 3------------------------------------------------------------------------------*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Kanit";
+}
 
 /*# sourceMappingURL=style.css.map */
