--- a/css/style.scss
+++ b/css/style.scss
@@ -10,428 +10,11 @@
 
 @use 'cards' as card;
 
+@use 'section_3-5' as section3-5;
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: font.$fontFamily;
 }
-body{
-    overflow-x:hidden;
-}
-
-/*------------------------------------------------------Sezione 3--------------------------------------------------------------*/
-.Section_3 {
-    background-color: rgb(8, 6, 11);
-    width:100vw;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    padding: function.convertpx(48px) 0;
-    .Image-Text_3 {
-        width: 100%;
-        max-width: 968px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        gap: function.convertpx(64px);
-        flex: 1 1 0%;
-        .text_3 {
-            padding: function.convertpx(32px);
-            max-width: function.convertpx(530px);
-            h1 {
-                font-family: font.$fontFamily;
-                font-weight: font.$fontHeavyWeight;
-                font-size: function.convertpx(40px);
-                color:rgb(244, 238, 255);
-                span {
-                    color: color.$mainPurple;
-                }
-            }
-            p {
-                font-weight: font.$fontLightWeight;
-                padding: function.convertpx(16px) 0;
-                color: rgb(184, 173, 210);
-            }
-            a {
-                text-decoration: none;
-                color: color.$buttonBlue;
-                font-weight: font.$fontHeavyWeight;
-            }
-            button {
-                @include buttons.button;
-                a {
-                    text-decoration: none;
-                    color: white;
-                }
-            }
-        }
-        .image_3 {
-            box-sizing: content-box;
-            display:flex;
-            flex: 1 1 0%;
-            height:100%;
-            width:100%;
-            min-height: 512px;
-            position: relative;
-                #coin1 {
-                    height: 100%;
-                    position: absolute;
-                    top: 0px;
-                    left: 0px;
-                    // animation: 3s ease-in-out 1s infinite normal none running bRTaPl;
-                    img {
-                        max-height: 100%;
-                        height: auto;
-                        max-width: 100%;
-                        width: auto;
-                    }
-                }
-                #coin2 {
-                    height: 100%;
-                    position: absolute;
-                    top: 0px;
-                    left: 0px;
-                    // animation: 3s ease-in-out 0.66s infinite normal none running dwSZFG;
-                    img {
-                        max-height: 100%;
-                        height: auto;
-                        max-width: 100%;
-                        width: auto;
-                    }
-                }
-                #coin3 {
-                    height: 100%;
-                    position: absolute;
-                    top: 0px;
-                    left: 0px;
-                    // animation: 3s ease-in-out 0.33s infinite normal none running uvIwZ;
-                    img {
-                        max-height: 100%;
-                        height: auto;
-                        max-width: 100%;
-                        width: auto;
-                    }
-                }
-            }
-        }
-    }
-/*---------------------------------------------------------------------------------FINE Sezione 3------------------------------------------------------------------------------*/
-
-/*-----------------------------------------------------------------------------------Sezione 5---------------------------------------------------------------------------------*/
-.Section_5 {
-    width:100vw;
-    background: linear-gradient(rgb(11, 69, 118) 0%, rgb(9, 17, 21) 100%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: function.convertpx(100px) 0;
-    position: relative;
-    .magic-cards {
-        position: relative;
-        box-sizing: content-box;
-        height: function.convertpx(300px);
-        width: function.convertpx(500px);
-        align-self: flex-end;
-        position:absolute;
-        left:0;
-        bottom:function.convertpx(-64px);
-        #m-c-1{
-            position: absolute;
-            bottom:0;
-            left:0;
-            img {
-                max-height: 100%;
-                height: auto;
-                max-width: 100%;
-                width: auto;
-            }
-        }
-        #m-c-2{
-            position: absolute;
-            bottom:0;
-            left:0;
-            img {
-                max-height: 100%;
-                height: auto;
-                max-width: 100%;
-                width: auto;
-            }
-        }
-        #m-c-3{
-            position: absolute;
-            bottom:0;
-            left:0;
-            img {
-                max-height: 100%;
-                height: auto;
-                max-width: 100%;
-                width: auto;
-            }
-        }
-        #m-c-4{
-            position: absolute;
-            bottom:0;
-            left:0;
-            img {
-                max-height: 100%;
-                height: auto;
-                max-width: 100%;
-                width: auto;
-            }
-        }
-    }
-    .biliard-balls {
-        position: relative;
-        box-sizing: content-box;
-        height: function.convertpx(300px);
-        width:function.convertpx(500px);
-        align-self: flex-start;
-        position: absolute;
-        right:0;
-        top: function.convertpx(-64px);
-        #b-b-1{
-            position: absolute;
-            top:0;
-            left:0;
-            img {
-                max-height: 100%;
-                height: auto;
-                max-width: 100%;
-                width: auto;
-            }
-        }
-        #b-b-2{
-            position: absolute;
-            top:0;
-            left:0;
-            img {
-                max-height: 100%;
-                height: auto;
-                max-width: 100%;
-                width: auto;
-            }
-        }
-        #b-b-3{
-            position: absolute;
-            top:0;
-            left:0;
-            img {
-                max-height: 100%;
-                height: auto;
-                max-width: 100%;
-                width: auto;
-            }
-        }
-        #b-b-4{
-            position: absolute;
-            top:0;
-            left:0;
-            img {
-                max-height: 100%;
-                height: auto;
-                max-width: 100%;
-                width: auto;
-            }
-        }
-        #b-b-5{
-            position: absolute;
-            top:0;
-            left:0;
-            img {
-                max-height: 100%;
-                height: auto;
-                max-width: 100%;
-                width: auto;
-            }
-        }
-    }
-    .container_5 {
-        z-index:1;
-        width:100%;
-        max-width: function.convertpx(880px);
-        background-color: rgba(8, 6, 11, 0.6);
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: 0 function.convertpx(35px);
-        padding: function.convertpx(40px) function.convertpx(100px);
-        border-radius: 3rem;
-        border: 1px solid rgb(56, 50, 65);
-        backdrop-filter: blur(12px);
-        .text_5 {
-            margin-bottom: 2rem;
-            text-align: center;
-            h2 {
-                font-family: font.$fontFamily;
-                font-weight: font.$fontHeavyWeight;
-                font-size: function.convertpx(40px);
-                color:white;
-                margin-bottom: 1rem;
-                span {
-                    color: color.$mainPurple;
-                }
-            }
-            p {
-                font-weight: font.$fontLightWeight;
-                color: rgb(184, 173, 210);
-                margin-bottom: 0.3rem;
-            }
-        }
-        .cards_5{
-            width:100%;
-            max-width:function.convertpx(600px);
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-            gap: 2rem;
-            .card1_5 {
-                background: linear-gradient(rgb(255, 178, 55) 0%, rgb(255, 205, 81) 51.17%, rgb(255, 231, 106) 100%);
-                max-width: function.convertpx(290px);
-                border-radius: function.convertpx(24px);
-                padding: 1.5rem;
-                transform: rotate(-2.36deg);
-                border: function.convertpx(1px) solid rgb(255, 178, 55);
-                border-bottom: function.convertpx(3px) solid rgb(255, 178, 55);
-                display: flex;
-                flex-direction:column;
-                .crystal-sphere {
-                    align-self: flex-end;
-                    flex-shrink: 0;
-                }
-                h2 {
-                    color: rgb(40, 13, 95);
-                    font-size: function.convertpx(40px);
-                }
-                p{
-                    color: rgb(40, 13, 95);
-                    padding: 1rem 0;
-                }
-                button{
-                    @include buttons.button;
-                    width: 100%;
-                    margin-top: 1rem;
-                    a {
-                        text-decoration: none;
-                        color: rgb(9, 17, 21);
-                    }
-                    .arrow{
-                        fill: rgb(25, 19, 38);
-                        margin-left: function.convertpx(4px);
-                    }
-                }
-            }
-            .card2_5 {
-                background: linear-gradient(rgb(118, 69, 217) 0%, rgb(81, 33, 177) 100%);
-                max-width: function.convertpx(290px);
-                border-radius: function.convertpx(24px);
-                padding: 1.5rem;
-                transform: rotate(1.43deg);
-                border: function.convertpx(1px) solid rgb(60, 23, 134);
-                border-bottom: function.convertpx(3px) solid rgb(60, 23, 134);
-                display: flex;
-                flex-direction:column;
-                .lottery-ticket {
-                    align-self: flex-end;
-                    fill: white;
-                    flex-shrink: 0;
-                }
-                h2 {
-                    background: -webkit-linear-gradient(rgb(255, 231, 106) 0%, rgb(255, 205, 81) 51.17%,  rgb(255, 178, 55)100%);
-                    background-clip: text;
-                    -webkit-background-clip: text; 
-                    -webkit-text-fill-color: transparent;
-                    font-size: function.convertpx(40px);
-                }
-                p {
-                    color: white;
-                    padding: 1rem 0;
-                }
-                button {
-                    @include buttons.button;
-                    width: 100%;
-                    margin-top: 1rem;
-                    a {
-                        text-decoration: none;
-                        color: rgb(9, 17, 21);
-                    }
-                    .arrow{
-                        fill: rgb(25, 19, 38);
-                        margin-left: function.convertpx(4px);
-                    }
-                }
-            }
-        }
-    }
-}
-//Responsive
-@media screen and (max-width:968px){
-    #h1_section_3, #h2_section_5 {
-            font-size: function.convertpx(32px);
-        }
-    .Section_5 {
-        .container_5 {
-            .cards_5 {
-                .card1_5 {
-                    #jackpot-prediction{
-                        font-size: function.convertpx(32px);
-                    }
-                }
-                .card2_5 {
-                    #jackpot-lottery{
-                        font-size: function.convertpx(32px);
-                    }
-                }
-            }
-        } 
-    }
-}
-@media screen and (max-width:852px){
-    .Section_3 {
-        .Image-Text_3 {
-            flex-direction: column;
-            .text_3 {
-                order:2;
-                max-width:100%;
-                padding-top:0;
-            }
-            .image_3 {
-                order:1;
-                max-width: function.convertpx(192px);
-                min-height: function.convertpx(192px);
-                align-self:flex-end;
-            }
-        }
-    }
-    .Section_5 {
-        .magic-cards {
-            height: function.convertpx(100px);
-            width: function.convertpx(200px);
-            bottom: function.convertpx(-35px);
-        }
-        .biliard-balls {
-            height: function.convertpx(100px);
-            width: function.convertpx(200px);
-            top: function.convertpx(-50px);
-        }
-        .container_5 {
-            padding: function.convertpx(20px) function.convertpx(50px);
-            .cards_5 {
-                flex-direction:column;
-                .card1_5 {
-                    transform: rotate(0);
-                }
-                .card2_5 {
-                    transform: rotate(0);
-                }
-            }
-        }
-    }
-}
-
-/*---------------------------------------------------------------------------------FINE Sezione 3------------------------------------------------------------------------------*/
