--- a/style.css
+++ b/style.css
@@ -20,14 +20,14 @@ body {
 }
 
 .super-criminal {
-  min-width: 70%;
+  width: 90%;
 }
 
 .img-text {
   margin-top: 3.125rem;
   display: flex;
   justify-content: center;
-  gap: 2.5rem;
+  gap: 0.625rem;
   width: 100%;
 }
 .img-text .img-motion {
@@ -156,7 +156,10 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
+  max-width: 62.5rem;
   margin-bottom: 3.125rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .res-data {
@@ -166,6 +169,7 @@ body {
   height: 5rem;
   font-weight: 600;
   margin-top: 1.25rem;
+  gap: 0.625rem;
 }
 .res-data #sub-res-data {
   width: 6.25rem;
@@ -201,54 +205,50 @@ body {
   color: #b8add2;
 }
 
-.hidden {
+#res-data-hidden {
   display: none;
-  width: 100%;
-}
-.hidden #res-data-hidden {
-  display: flex;
   justify-content: space-between;
   width: 100%;
   height: 5rem;
   font-weight: 600;
   margin-top: 1.25rem;
 }
-.hidden #res-data-hidden #sub-res-data-hidden {
+#res-data-hidden #sub-res-data-hidden {
   width: 100px;
 }
-.hidden #res-data-hidden #sub-res-data-hidden h6 {
+#res-data-hidden #sub-res-data-hidden h6 {
   color: #9a6aff;
   margin-bottom: 0.5rem;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
 }
-.hidden #res-data-hidden #sub-res-data-hidden p {
+#res-data-hidden #sub-res-data-hidden p {
   color: #f4eeff;
   margin-bottom: 0.3125rem;
 }
-.hidden #res-data-hidden #sub-res-data-hidden p:nth-last-child(1) {
+#res-data-hidden #sub-res-data-hidden p:nth-last-child(1) {
   color: #b8add2;
 }
-.hidden #res-data-hidden #subtitle-res-data-hidden {
+#res-data-hidden #subtitle-res-data-hidden {
   width: 100px;
   border-left: 0.0625rem solid #000000;
   padding-left: 0.625rem;
 }
-.hidden #res-data-hidden #subtitle-res-data-hidden h6 {
+#res-data-hidden #subtitle-res-data-hidden h6 {
   overflow-wrap: break-word !important;
   color: #9a6aff;
   margin-bottom: 0.5rem;
   width: 100%;
 }
-.hidden #res-data-hidden #subtitle-res-data-hidden p {
+#res-data-hidden #subtitle-res-data-hidden p {
   color: #f4eeff;
   margin-bottom: 0.3125rem;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
 }
-.hidden #res-data-hidden #subtitle-res-data-hidden p:nth-last-child(1) {
+#res-data-hidden #subtitle-res-data-hidden p:nth-last-child(1) {
   color: #b8add2;
 }
 
@@ -266,9 +266,9 @@ html {
     padding-bottom: 0rem;
   }
   .img-text .grand-motion {
-    width: 100%;
     display: flex;
     justify-content: center;
+    flex-basis: 50%;
   }
   .img-text .img-motion {
     min-width: 100%;
@@ -290,6 +290,7 @@ html {
   }
   .img-text .text {
     width: 100%;
+    flex-basis: 50%;
   }
   .img-text .text #subtitle-par {
     margin: 0px;
@@ -320,8 +321,62 @@ html {
   #criminal {
     padding-left: 1.25rem;
   }
+  #subtitle-res-data {
+    border: none !important;
+    padding: 0px !important;
+  }
+  #sub-res-data {
+    grid-area: firstDiv;
+    border: none;
+  }
+  #subtitle-res-data:nth-child(1) {
+    grid-area: secondDiv;
+  }
+  #subtitle-res-data:nth-child(2) {
+    grid-area: thirdDiv;
+  }
+  #subtitle-res-data:nth-child(3) {
+    grid-area: fourthDiv;
+  }
+  #subtitle-res-data:nth-child(4) {
+    grid-area: fifthDiv;
+  }
   .res-data {
     display: grid !important;
-    grid-template-columns: repeat(2, 1fr) !important;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "firstDiv secondDiv" "thirdDiv none" "fourthDiv fifthDiv";
+    height: 100%;
+  }
+  .hidden {
+    height: 100%;
+  }
+  #subtitle-res-data-hidden {
+    border: none !important;
+    padding: 0px !important;
+  }
+  #sub-res-data-hidden {
+    grid-area: firstDivHidden;
+    border-left: none;
+  }
+  #subtitle-res-data-hidden:nth-child(1) {
+    grid-area: secondDivHidden;
+  }
+  #subtitle-res-data-hidden:nth-child(2) {
+    grid-area: thirdDivHidden;
+  }
+  #subtitle-res-data-hidden:nth-child(3) {
+    grid-area: fourthDivHidden;
+  }
+  #subtitle-res-data-hidden:nth-child(4) {
+    grid-area: fifthDivHidden;
+  }
+  #res-data-hidden {
+    display: grid !important;
+    height: 100%;
+    gap: 0.625rem;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "firstDivHidden secondDivHidden" "thirdDivHidden none" "fourthDivHidden fifthDivHidden";
   }
 }/*# sourceMappingURL=style.css.map */
