--- a/scss/_Sezione3-5.scss
+++ b/scss/_Sezione3-5.scss
@@ -31,6 +31,8 @@ body{
     align-items: center;
     justify-content: center;
     padding: function.convertpx(48px) function.convertpx(32px);
+    position: relative;
+    z-index: 5;
     .Image-Text_3 {
         width: 100%;
         max-width: function.convertpx(880px);
