--- a/scss/style.css
+++ b/scss/style.css
@@ -2401,28 +2401,45 @@ html {
     grid-template-areas: "firstDivHidden secondDivHidden" "thirdDivHidden none" "fourthDivHidden fifthDivHidden";
   }
 }
-.sezione6 {
+.sezione6-wrapper {
+  position: relative;
+  z-index: 50;
+  background-color: black;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: auto;
   height: 100%;
+  max-height: 750px;
   width: 100%;
-  padding: 50px 200px;
+}
+
+.sezione6 {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  height: 100%;
+  max-height: 750px;
+  width: 100%;
 }
 
 .blocco1flex {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
   height: 70%;
+  max-width: 1100px;
   margin-bottom: 30px;
 }
 .blocco1flex .textblocco1 {
-  width: 50%;
+  width: 35%;
   color: #f4eeff;
-  font-size: 1.875rem;
+  font-size: 2rem;
 }
 .blocco1flex .textblocco1 span {
   color: #9a6aff;
@@ -2441,22 +2458,30 @@ html {
   align-items: center;
 }
 .blocco1flex .textblocco1 .bottone-learn button {
-  padding-top: 15px;
-  border-radius: 16px;
-  background-color: #1fc7d4;
-  color: #ffffff;
-  height: 100%;
-  width: 25%;
-  display: flex;
-  justify-content: center;
+  align-items: center;
+  border: 0px;
+  border-radius: 1rem;
   box-shadow: rgba(14, 14, 44, 0.4) 0px -1px 0px 0px inset;
-  opacity: 1;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 600;
+  justify-content: center;
   letter-spacing: 0.03em;
+  line-height: 1;
+  opacity: 1;
+  outline: 0px;
+  transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
+  height: 3rem;
+  padding: 0px 1.5rem;
+  background-color: #1FC7d4;
+  color: white;
+  margin-right: 0.5rem;
 }
 .blocco1flex .textblocco1 .bottone-learn button p {
   font-size: 16px;
   font-weight: 600;
-  padding-bottom: 12px;
 }
 .blocco1flex .textblocco1 .bottone-learn #learn {
   font-size: 16px;
@@ -2479,13 +2504,12 @@ html {
 }
 .imgBounce picture {
   height: 100%;
-  width: 50%;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
   padding-left: 50px;
   padding-bottom: 20px;
-  max-width: 50%;
   position: relative;
 }
 .imgBounce picture #main-img {
@@ -2536,8 +2560,10 @@ html {
 }
 
 .blocco2grid {
+  max-width: 1200px;
   width: 100%;
   height: 30%;
+  text-align: center;
   display: grid;
   gap: 30px;
   grid-template-columns: repeat(3, auto);
