--- a/scss/_Sezione1.scss
+++ b/scss/_Sezione1.scss
@@ -307,12 +307,13 @@ body {
                                 position: absolute;
                                 transform: translate(-50%, 0px);
                                 left: 50%;
+                                top: 40px;
                                 bottom: auto;
                                 background-color: rgb(39, 38, 44);
                                 box-shadow: rgba(25, 19, 38, 0.1) 0px 2px 12px -8px,
                                     rgba(25, 19, 38, 0.05) 0px 1px 1px;
                                 padding: 16px;
-                                max-height: 0px;
+                                
                                 overflow: hidden;
                                 z-index: 10;
                                 border-radius: 4px;
