--- a/scss/_Sezione1.scss
+++ b/scss/_Sezione1.scss
@@ -487,7 +487,11 @@ body {
                                 font-size: 40px;
                                 font-weight: 600;
                                 position: relative;
+                                white-space: nowrap;
                                 z-index: 2;
+                                &>span{
+                                    font-size: 20px;
+                                }
 
                             }
                         }
@@ -784,6 +788,7 @@ body {
     width: 100vw;
     height: 100vh;
     z-index: 1000;
+    opacity: 0;
    background-color: rgba(244, 238, 255, 0.6);
     display: flex;
     justify-content: center;
