--- a/scss/_Sezione7.scss
+++ b/scss/_Sezione7.scss
@@ -37,7 +37,7 @@ body{
         &.sectionSeven{
             background-color: #6f3db1;
             // background-color: color.$mainPurple;
-            background-image: url(./resources/assets-section7/background.svg);
+            background-image: url(../resources/assets-section7/background.svg);
             background-size: cover;
             background-position: center;
             width: 100%;
