--- a/scss/_Sezione1.scss
+++ b/scss/_Sezione1.scss
@@ -164,7 +164,7 @@ body {
                                     &>a {
                                         position: relative;
                                         display: flex;
-                                        -webkit-box-align: center;
+                                        
                                         align-items: center;
                                         color: rgb(184, 173, 210);
                                         font-size: 16px;
@@ -203,7 +203,7 @@ body {
                                     }
 
                                     &>a {
-                                        -webkit-box-align: center;
+                                       
                                         align-items: center;
                                         border: 0px;
                                         background: transparent;
@@ -213,7 +213,7 @@ body {
                                         display: flex;
                                         font-size: 16px;
                                         height: 48px;
-                                        -webkit-box-pack: justify;
+                                        
                                         justify-content: space-between;
                                         outline: 0px;
                                         padding-left: 16px;
@@ -242,9 +242,8 @@ body {
                         margin-right: 12px;
 
                         &>a {
-                            gap: 5px;
+                            gap: 8.5px;
                             display: flex;
-                            -webkit-box-align: center;
                             align-items: center;
 
                             &>svg {
@@ -266,30 +265,18 @@ body {
 
                         &>.nav-right-languages-inner {
                             position: relative;
+                            display: flex;
 
                             &>button {
-                                position: relative;
-                                -webkit-box-align: center;
-                                align-items: center;
+                               
                                 border: 0px;
-                                border-radius: 16px;
+                                
                                 cursor: pointer;
-                                display: inline-flex;
-                                font-family: inherit;
-                                font-weight: 600;
-                                -webkit-box-pack: center;
-                                justify-content: center;
-                                letter-spacing: 0.03em;
-                                line-height: 1;
-                                opacity: 1;
-                                outline: 0px;
-                                transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
-                                height: 20px;
+                                
                                 font-size: 12px;
                                 padding: 0px 8px;
                                 background-color: transparent;
-                                color: rgb(31, 199, 212);
-                                box-shadow: none;
+                               
 
                                 &>svg {
                                     align-self: center;
@@ -323,7 +310,6 @@ body {
 
                                 &>button {
                                     position: relative;
-                                    -webkit-box-align: center;
                                     align-items: center;
                                     border: 0px;
                                     border-radius: 16px;
@@ -332,7 +318,6 @@ body {
                                     font-family: inherit;
                                     font-size: 16px;
                                     font-weight: 600;
-                                    -webkit-box-pack: center;
                                     justify-content: center;
                                     letter-spacing: 0.03em;
                                     line-height: 1;
@@ -357,7 +342,6 @@ body {
 
                         &>button {
                             position: relative;
-                            -webkit-box-align: center;
                             align-items: center;
                             border: 0px;
                             border-radius: 16px;
@@ -366,7 +350,6 @@ body {
                             font-family: inherit;
                             font-size: 16px;
                             font-weight: 600;
-                            -webkit-box-pack: center;
                             justify-content: center;
                             letter-spacing: 0.03em;
                             line-height: 1;
@@ -393,7 +376,6 @@ body {
 
                     &>button {
                         position: relative;
-                        -webkit-box-align: center;
                         align-items: center;
                         border: 0px;
                         border-radius: 16px;
@@ -403,7 +385,6 @@ body {
                         font-family: inherit;
                         font-size: 16px;
                         font-weight: 600;
-                        -webkit-box-pack: center;
                         justify-content: center;
                         letter-spacing: 0.03em;
                         line-height: 1;
@@ -443,12 +424,11 @@ body {
                 padding: 0 function.convertpx(100px);
 
                 &>.hero-timer {
-                    background-color: blue;
+                    background-color: rgb(105, 67, 195);;
                     border-radius: 30px;
                     width: 100%;
                     max-width: 1500px;
                     height: 200px;
-                    background: -webkit-linear-gradient(top, rgb(118, 69, 217) 0%, rgb(69, 42, 122) 100%);
                     padding: 25px;
                     display: flex;
                     flex-direction: column;
@@ -797,9 +777,7 @@ body {
   .jXSFZ { 
       display: flex; 
       flex-direction: column; 
-      -webkit-box-pack: center; 
       justify-content: center; 
-      -webkit-box-align: center; 
       align-items: center; 
       position: fixed; 
       inset: 0px; 
@@ -853,22 +831,9 @@ body {
       box-sizing: border-box;
   } 
   
-  :-webkit-scrollbar { 
-      width: 8px;
-  } 
-  
-  :-webkit-scrollbar-thumb { 
-      background: rgb(184, 173, 210); 
-      border-radius: 8px;
-  } 
-  
-  :-webkit-scrollbar-track { 
-      box-shadow: rgb(55, 47, 71) 0px 0px 5px inset; 
-      border-radius: 10px;
-  } 
-  
+     
+ 
   .iZtpYs { 
-      -webkit-box-align: center; 
       align-items: center; 
       background: transparent; 
       border-bottom: 1px solid rgb(56, 50, 65); 
@@ -910,14 +875,12 @@ body {
   }     
   
   .kCFpxD { 
-      -webkit-box-align: center; 
       align-items: center; 
       flex: 1 1 0%;
   } 
   
   .elea-dO { 
       position: relative; 
-      -webkit-box-align: center; 
       align-items: center; 
       border: 0px; 
       border-radius: 16px; 
@@ -926,7 +889,6 @@ body {
       font-family: inherit; 
       font-size: 16px; 
       font-weight: 600; 
-      -webkit-box-pack: center; 
       justify-content: center; 
       letter-spacing: 0.03em; 
       line-height: 1; 
@@ -1028,7 +990,6 @@ body {
   
   .dAAOan { 
       position: relative; 
-      -webkit-box-align: center; 
       align-items: center; 
       border: 0px; 
       border-radius: 16px; 
@@ -1038,7 +999,6 @@ body {
       font-family: inherit; 
       font-size: 16px; 
       font-weight: 600; 
-      -webkit-box-pack: center; 
       justify-content: center; 
       letter-spacing: 0.03em; 
       line-height: 1; 
@@ -1054,7 +1014,6 @@ body {
   
   .ksfaWt { 
       position: relative; 
-      -webkit-box-align: center; 
       align-items: center; 
       border: 0px; 
       border-radius: 16px; 
@@ -1063,7 +1022,6 @@ body {
       font-family: inherit; 
       font-size: 16px; 
       font-weight: 600; 
-      -webkit-box-pack: center; 
       justify-content: center; 
       letter-spacing: 0.03em; 
       line-height: 1; 
@@ -1079,12 +1037,10 @@ body {
   } 
   
   .bAGrii { 
-      -webkit-box-align: center; 
       align-items: center; 
       display: flex; 
       flex-direction: column; 
       height: auto; 
-      -webkit-box-pack: center; 
       justify-content: center; 
       margin-left: auto; 
       margin-right: auto;
@@ -1119,9 +1075,7 @@ body {
   .jXSFZ { 
       display: flex; 
       flex-direction: column; 
-      -webkit-box-pack: center; 
       justify-content: center; 
-      -webkit-box-align: center; 
       align-items: center; 
       position: fixed; 
       inset: 0px; 
@@ -1172,26 +1126,9 @@ body {
     } 
   }     
   
-  *,:before,:after { 
-      box-sizing: border-box;
-  } 
-  
-  :-webkit-scrollbar { 
-      width: 8px;
-  } 
-  
-  :-webkit-scrollbar-thumb { 
-      background: rgb(184, 173, 210); 
-      border-radius: 8px;
-  } 
-  
-  :-webkit-scrollbar-track { 
-      box-shadow: rgb(55, 47, 71) 0px 0px 5px inset; 
-      border-radius: 10px;
-  } 
+
   
   .eHwgEU { 
-      -webkit-box-align: center; 
       align-items: center; 
       background: transparent; 
       border-bottom: 1px solid rgb(56, 50, 65); 
@@ -1227,14 +1164,12 @@ body {
   }     
   
   .kCFpxD { 
-      -webkit-box-align: center; 
       align-items: center; 
       flex: 1 1 0%;
   } 
   
   .elea-dO { 
       position: relative; 
-      -webkit-box-align: center; 
       align-items: center; 
       border: 0px; 
       border-radius: 16px; 
@@ -1243,7 +1178,6 @@ body {
       font-family: inherit; 
       font-size: 16px; 
       font-weight: 600; 
-      -webkit-box-pack: center; 
       justify-content: center; 
       letter-spacing: 0.03em; 
       line-height: 1; 
@@ -1337,15 +1271,12 @@ body {
   
   .bQofKN { 
       display: flex; 
-      -webkit-box-pack: justify; 
       justify-content: space-between;
   } 
   
   .bBjjPN { 
       display: flex; 
-      -webkit-box-pack: justify; 
       justify-content: space-between; 
-      -webkit-box-align: center; 
       align-items: center;
   } 
   
@@ -1357,7 +1288,6 @@ body {
   } 
   
   .dLafqe { 
-      -webkit-box-align: center; 
       align-items: center; 
       background-color: rgb(102, 97, 113); 
       border-radius: 24px; 
@@ -1372,12 +1302,10 @@ body {
   
   .cdKJAR { 
       display: flex; 
-      -webkit-box-align: center; 
       align-items: center;
   } 
   
   .enaAag { 
-      -webkit-box-align: center; 
       align-items: center; 
       background-color: rgb(55, 47, 71); 
       border-radius: 24px; 
@@ -1433,7 +1361,6 @@ body {
   .igTJWs { 
       display: flex; 
       justify-content: space-around; 
-      -webkit-box-align: center; 
       align-items: center;
   } 
   
@@ -1443,7 +1370,6 @@ body {
   
   .bPhvhB { 
       position: relative; 
-      -webkit-box-align: center; 
       align-items: center; 
       border: 0px; 
       border-radius: 16px; 
@@ -1453,7 +1379,6 @@ body {
       font-family: inherit; 
       font-size: 16px; 
       font-weight: 600; 
-      -webkit-box-pack: center; 
       justify-content: center; 
       letter-spacing: 0.03em; 
       line-height: 1; 
@@ -1470,7 +1395,6 @@ body {
   
   .cnIgEn { 
       position: relative; 
-      -webkit-box-align: center; 
       align-items: center; 
       border: 0px; 
       border-radius: 16px; 
@@ -1479,7 +1403,6 @@ body {
       font-family: inherit; 
       font-size: 16px; 
       font-weight: 600; 
-      -webkit-box-pack: center; 
       justify-content: center; 
       letter-spacing: 0.03em; 
       line-height: 1; 
@@ -1497,7 +1420,6 @@ body {
   
   .bmPNCL { 
       position: relative; 
-      -webkit-box-align: center; 
       align-items: center; 
       border: 0px; 
       border-radius: 16px; 
@@ -1506,7 +1428,6 @@ body {
       font-family: inherit; 
       font-size: 16px; 
       font-weight: 600; 
-      -webkit-box-pack: center; 
       justify-content: center; 
       letter-spacing: 0.03em; 
       line-height: 1; 
@@ -1528,9 +1449,7 @@ body {
   
   .hJzGid { 
       display: flex; 
-      -webkit-box-align: center; 
       align-items: center; 
-      -webkit-box-pack: center; 
       justify-content: center;
   } 
   
