--- a/scss/_Sezione2.scss
+++ b/scss/_Sezione2.scss
@@ -9,7 +9,19 @@
     margin: 0px;
     padding: 0px;
 }
+#gradient-section2-3{
+width: 100vw;
+height: 80px;
+background: linear-gradient(to bottom left,rgb(32, 19, 53) 49%, rgb(8, 6, 11) 51% );
+margin: -2px 0 -2px 0;
+}
+#gradient-section3-4{
+    width: 100vw;
+    height: 80px;
+    background: linear-gradient(to bottom right, rgb(8, 6, 11) 49% , #3b374b 51% );
+    margin: -2px 0 -2px 0;
 
+}
 .entire_section {
     background-image: linear-gradient(rgb(9, 7, 12) 22%, rgb(32, 19, 53) 100%);
     width: 100vw;
@@ -141,6 +153,12 @@
 }
 
 @media screen and (max-width:850px) {
+    #gradient-section2-3{
+        height: 50px;
+        }
+        #gradient-section3-4{
+            height: 50px;
+        }
     .entire_section {
         height: fit-content;
 
