--- a/scss/_Sezione4.scss
+++ b/scss/_Sezione4.scss
@@ -39,7 +39,7 @@ body {
 }
 
 .img-text {
-  margin-top: function.convertpx(50px);
+  // margin-top: function.convertpx(50px);
   display: flex;
   justify-content: center;
   gap: function.convertpx(10px);
