--- a/scss/_Sezione7.scss
+++ b/scss/_Sezione7.scss
@@ -446,6 +446,9 @@ body{
             display: none;
         }
     }
+    footer{
+        // padding-bottom: 56px !important;
+    }
 }
 
 @media screen and (max-width: 575px){
