--- a/scss/style.css
+++ b/scss/style.css
@@ -627,32 +627,7 @@ body > .nav-fixed-small {
 .desktop {
     display: none !important;
   }
-  body > section.nav-fixed-small {
-    display: flex;
-    position: fixed;
-    bottom: 0;
-    z-index: 1000;
-    align-items: center;
-    width: 100vw;
-    height: 56px;
-    background-color: rgb(39, 38, 44);
-    border-bottom: 1px solid rgb(56, 50, 65);
-    transform: translate3d(0px, 0px, 0px);
-    padding-left: 16px;
-    padding-right: 16px;
-    justify-content: space-around;
-    visibility: visible;
-  }
-  body > section.nav-fixed-small > button {
-    border: none;
-    background-color: transparent;
-    color: rgb(184, 173, 210);
-    cursor: pointer;
-  }
-  body > section.nav-fixed-small > button svg {
-    fill: rgb(184, 173, 210);
-  }
-  .close-desktop {
+  body .close-desktop {
     display: none !important;
   }
   .close-mobile {
@@ -674,6 +649,31 @@ body > .nav-fixed-small {
   }
 }
 @media screen and (max-width: 576px) {
+  section.nav-fixed-small {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    z-index: 1000;
+    align-items: center;
+    width: 100vw;
+    height: 56px;
+    background-color: rgb(39, 38, 44);
+    border-bottom: 1px solid rgb(56, 50, 65);
+    transform: translate3d(0px, 0px, 0px);
+    padding-left: 16px;
+    padding-right: 16px;
+    justify-content: space-around;
+    visibility: visible;
+  }
+  section.nav-fixed-small > button {
+    border: none;
+    background-color: transparent;
+    color: rgb(184, 173, 210);
+    cursor: pointer;
+  }
+  section.nav-fixed-small > button svg {
+    fill: rgb(184, 173, 210);
+  }
   .settings {
     height: 100% !important;
   }
